--- a/public/c/index.html
+++ b/public/c/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 	<div class="pa3 pa5-ns">
-	<p class="f5 lh-copy measure-wide"><p>SEALT</p>
+	<p class="f5 lh-copy measure-wide"><ul>
+<li>Track</li>
+<li>Beam</li>
+<li>Hydra</li>
+<li>Loop</li>
+</ul>
 </p>
 	</div>
 </body>
