--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
 	<section class="mw7 center">
 	<ul>
 		<article>
-		<a class="db pv4 ph3 ph0-l no-underline black dim" href="http://example.org/c/">
+		<a class="db pv4 ph3 ph0-l no-underline black dim" href="/c/">
 		<h1 class="f3 fw1 mt0 lh-title">List of Words</h1>
-		<p>SEALT</p>
+		<p> Track Beam Hydra Loop  </p>
 		</a>
 		</article>
 	</ul>
@@ -31,18 +31,7 @@
 	<section class="mw7 center">
 	<ul>
 		<article>
-		<a class="db pv4 ph3 ph0-l no-underline black dim" href="http://example.org/b/">
-		<h1 class="f3 fw1 mt0 lh-title">Sports Analytics</h1>
-		<p>WEBAPP</p>
-		</a>
-		</article>
-	</ul>
-	</section>
-	
-	<section class="mw7 center">
-	<ul>
-		<article>
-		<a class="db pv4 ph3 ph0-l no-underline black dim" href="http://example.org/a/">
+		<a class="db pv4 ph3 ph0-l no-underline black dim" href="/a/">
 		<h1 class="f3 fw1 mt0 lh-title">THE ADVENTURE OF THE ENGINEER’S THUMB</h1>
 		<p>Of all the problems which have been submitted to my friend, Mr. Sherlock Holmes, for solution during the years of our intimacy, there were only two which I was the means of introducing to his notice—that of Mr. Hatherley’s thumb, and that of Colonel Warburton’s madness. Of these the latter may have afforded a finer field for an acute and original observer, but the other was so strange in its inception and so dramatic in its details that it may be the more worthy of being placed upon record, even if it gave my friend fewer openings for those deductive methods of reasoning by which he achieved such remarkable results.</p>
 		</a>
