college hoop no viz

--- a/public/c/index.html
+++ b/public/c/index.html
@@ -4,17 +4,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>readme</title>
 </head>
-<body>
-	<div class="pa3 pa5-ns">
-	<p class="f5 lh-copy measure-wide"><ul>
-<li>Track</li>
-<li>Beam</li>
-<li>Hydra</li>
-<li>Loop</li>
+<body class = "bg-light-yellow">
+	<nav class="pa3 pa4-ns">
+  <a class="link dim black b f6 f5-ns dib mr3" href="/">readme</a>
+  
+</nav>
+
+
+	<div class="bg-light-yellow mw7 center">
+		<p>FAST is a one-number metric to help inform of the next two-way NBA stars.</p>
+<p>FAST stands for:</p>
+<ul>
+<li>Free throws</li>
+<li>Age</li>
+<li>Steals</li>
+<li>Turnovers</li>
 </ul>
-</p>
+<p>Data viz:</p>
+
 	</div>
 </body>
 </html>
