--- a/public/index.html
+++ b/public/index.html
@@ -5,40 +5,47 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>readme</title>
 </head>
-<body>
+<body class = "bg-light-yellow">
 	<nav class="pa3 pa4-ns">
-  <a class="link dim black b f2 lh-copy tc db mb3 mb4-ns" href="/" title="Home">readme</a>
-  <div class="tc pb3">
-    <a class="link dim gray f6 f5-ns dib mr3" href="https://github.com/dxyz004" target="_blank" rel="noopener noreferrer" title="About">link1</a>
-    <a class="link dim gray f6 f5-ns dib mr3" href="#" title="Store">link2</a>
-    <a class="link dim gray f6 f5-ns dib" href="#" title="Contact">link3</a>
-  </div>
+  <a class="link dim black b f6 f5-ns dib mr3" href="/">readme</a>
+  
 </nav>
+
+
 	
 	<section class="mw7 center">
-	<ul>
-		<article>
-		<a class="db pv4 ph3 ph0-l no-underline black dim" href="/c/">
-		<h1 class="f3 fw1 mt0 lh-title">List of Words</h1>
-		<p> Track Beam Hydra Loop  </p>
+	<ul class="list pl0">
+		<a class="db f3 mb1 black dim" href="/three/">
+		<h1 class="f3 fw1 mt0 lh-title">Three</h1>
 		</a>
-		</article>
 	</ul>
 	</section>
 	
 	<section class="mw7 center">
-	<ul>
-		<article>
-		<a class="db pv4 ph3 ph0-l no-underline black dim" href="/a/">
-		<h1 class="f3 fw1 mt0 lh-title">THE ADVENTURE OF THE ENGINEER’S THUMB</h1>
-		<p>Of all the problems which have been submitted to my friend, Mr. Sherlock Holmes, for solution during the years of our intimacy, there were only two which I was the means of introducing to his notice—that of Mr. Hatherley’s thumb, and that of Colonel Warburton’s madness. Of these the latter may have afforded a finer field for an acute and original observer, but the other was so strange in its inception and so dramatic in its details that it may be the more worthy of being placed upon record, even if it gave my friend fewer openings for those deductive methods of reasoning by which he achieved such remarkable results.</p>
+	<ul class="list pl0">
+		<a class="db f3 mb1 black dim" href="/two/">
+		<h1 class="f3 fw1 mt0 lh-title">Two</h1>
 		</a>
-		</article>
 	</ul>
 	</section>
 	
+	<section class="mw7 center">
+	<ul class="list pl0">
+		<a class="db f3 mb1 black dim" href="/one/">
+		<h1 class="f3 fw1 mt0 lh-title">One</h1>
+		</a>
+	</ul>
+	</section>
+	
+	<section class="mw7 center">
+	<ul class="list pl0">
+		<a class="db f3 mb1 black dim" href="/c/">
+		<h1 class="f3 fw1 mt0 lh-title">FAST a College Basketball Metric</h1>
+		</a>
+	</ul>
+	</section>
 	
 </body>
 </html>
