--- a/public/one/index.html
+++ b/public/one/index.html
@@ -7,15 +7,14 @@
 	<title>readme</title>
 </head>
 <body class = "bg-light-yellow">
-	{{ partial "header" . }}
-	{{range .Pages}}
-	<section class="mw7 center">
-	<ul class="list pl0">
-		<a class="db f3 mb1 black dim" href="{{.URL}}">
-		<h1 class="f3 fw1 mt0 lh-title">{{.Title}}</h1>
-		</a>
-	</ul>
-	</section>
-	{{end}}
+	<nav class="pa3 pa4-ns">
+  <a class="link dim black b f6 f5-ns dib mr3" href="/">readme</a>
+  
+</nav>
+
+
+	<div class="bg-light-yellow mw7 center">
+		
+	</div>
 </body>
 </html>
