--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>readme</title>
+	<title>Daniel's Notes</title>
 </head>
 <body class = "bg-light-yellow">
 	<nav class="pa3 pa4-ns">
-  <a class="link dim black b f6 f5-ns dib mr3" href="/">readme</a>
+  <a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>
   
 </nav>
 
@@ -17,32 +17,8 @@
 	
 	<section class="mw7 center">
 	<ul class="list pl0">
-		<a class="db f3 mb1 black dim" href="/three/">
-		<h1 class="f3 fw1 mt0 lh-title">Three</h1>
-		</a>
-	</ul>
-	</section>
-	
-	<section class="mw7 center">
-	<ul class="list pl0">
-		<a class="db f3 mb1 black dim" href="/two/">
-		<h1 class="f3 fw1 mt0 lh-title">Two</h1>
-		</a>
-	</ul>
-	</section>
-	
-	<section class="mw7 center">
-	<ul class="list pl0">
-		<a class="db f3 mb1 black dim" href="/one/">
-		<h1 class="f3 fw1 mt0 lh-title">One</h1>
-		</a>
-	</ul>
-	</section>
-	
-	<section class="mw7 center">
-	<ul class="list pl0">
-		<a class="db f3 mb1 black dim" href="/c/">
-		<h1 class="f3 fw1 mt0 lh-title">FAST a College Basketball Metric</h1>
+		<a class="db f3 mb1 black dim" href="/fast/">
+			<h1 class="f3 fw1 mt0 lh-title">FAST: A College Basketball Metric</h1>
 		</a>
 	</ul>
 	</section>
