--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -15,23 +15,8 @@
 
 
 	<div class="bg-light-yellow mw7 center">
-		<p><strong>1 - Know the principles of Object Oriented programming (inheritance, encapsulation etc.)</strong></p>
-<p>Associated PDF(s):</p>
-<p><strong>2 - Be able to give an overview of the Extreme Programming process from the survey of agile processes</strong>
-Associated PDF(s):
-<strong>3 - Know the principles of Model-Driven development and its advantages</strong>
-Associated PDF(s):
-<strong>4 - Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong>
-Associated PDF(s):
-<strong>5 - Know how to implement event-based notification in Java</strong></p>
-<p><strong>8 - Be able to create a class diagram and a statechart from requirements</strong></p>
-<blockquote>
-<p><strong>6 - Know the syntax of the class diagram language (class representations, various kinds of associations)</strong>
-<strong>7 - Know the syntax of the statechart diagram language</strong></p>
-</blockquote>
-<p><strong>9 - Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
-<p><strong>10 - Be able to create testcases with a JUnit framework</strong> no coding</p>
-<p><strong>11 – Be able to create testcases according to boundary, statement and edge coverage criteria</strong></p>
+		<p><a href="/uploads/3354_oo_process.pdf">3354_oo_process.pdf</a>
+</p>
 
 	</div>
 </body>
