--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	
 	<section class="mw7 center">
 	<ul class="list pl0">
-		<a class="db f3 mb1 dark-blue dim" href="/midtermoutline/">
+		<a class="db f3 mb1 dim" href="/midtermoutline/">
 			<h1 class="f3 fw1 mt0 lh-title">Midterm Outline</h1>
 		</a>
 	</ul>
