--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -15,7 +15,79 @@
 
 
 	<div class="bg-light-yellow mw7 center">
-		
+		<ol>
+<li>
+<p><strong>Know the principles of Object Oriented programming (inheritance, encapsulation etc.)</strong></p>
+<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/3354_oo_process.pdf" target="_blank">3354_oo_process.pdf</a>
+</p>
+<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/3354_s20_june3-2020.pdf" target="_blank">3354_s20_june3-2020.pdf</a>
+</p>
+</li>
+<li>
+<p><strong>Be able to give an overview of the Extreme Programming process from the survey of agile processes</strong></p>
+<p><em>3.1.1. Process (Figure 2. Life cycle &hellip;)</em></p>
+<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/agilecomp.pdf" target="_blank">agilecomp.pdf</a>
+</p>
+</li>
+<li>
+<p><strong>Know the principles of Model-Driven development and its advantages</strong></p>
+<p>Model driven paradigm:</p>
+<ul>
+<li>The system is defined as an executable specification which is an object-oriented analysis model.</li>
+<li>The system is validated at the analysis model level.</li>
+<li>A software and execution architecture is defined as a set of class templates in an object-oriented programming system.</li>
+<li>The executable system is realized by compilation of the validated analysis model to the software execution architecture.</li>
+</ul>
+<p>Advantages/Why:
+<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/introclassesattr.pdf" target="_blank">introclassesattr.pdf</a>
+</p>
+</li>
+<li>
+<p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong></p>
+<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
+</p>
+</li>
+<li>
+<p><strong>Know how to implement event-based notification in Java</strong></p>
+<p>Listeners &hellip;</p>
+</li>
+<li>
+<p><strong>Know the syntax of the class diagram language (class representations, various kinds of associations)</strong></p>
+</li>
+<li>
+<p><strong>Know the syntax of the statechart diagram language</strong></p>
+</li>
+<li>
+<p><strong>Be able to create a class diagram and a statechart from requirements</strong></p>
+<p>Class diagram: Library Example</p>
+<p>Statechart: Lift Control Case Study</p>
+</li>
+<li>
+<p><strong>Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
+<p>Verification and Validation
+Types of Testing—what is tested</p>
+<ul>
+<li>Unit</li>
+<li>Integration</li>
+<li>System</li>
+<li>Acceptance</li>
+<li>Regression</li>
+</ul>
+<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/VandV.PDF" target="_blank">VandV.PDF</a>
+</p>
+</li>
+<li>
+<p><strong>Be able to create testcases with a JUnit framework</strong></p>
+<p><a href="http://junit.sourceforge.net/doc/testinfected/testing.htm" target="_blank">http://junit.sourceforge.net/doc/testinfected/testing.htm</a>
+
+(No coding)</p>
+</li>
+<li>
+<p><strong>Be able to create testcases according to boundary, statement and edge coverage criteria</strong></p>
+<p>Given Java code. Provide X amount of paths.</p>
+</li>
+</ol>
+
 	</div>
 </body>
 </html>
