--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -22,6 +22,14 @@
 </p>
 <p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/3354_s20_june3-2020.pdf" target="_blank">3354_s20_june3-2020.pdf</a>
 </p>
+<p>Use All to Achieve OO:</p>
+<ul>
+<li>Inheritance: Is an ability to inherit. Function implementations (behaviors) by a subclass from a super class. Main benefit is software reuse.
+&ldquo;No silver bullet&rdquo;.
+Drawback: class hierarchy.</li>
+<li>Polymorphism: Is an ability to provide multiple implementations for a single function declaration. Simplifies code. Complicates testing. Superclass shape example: We need to have an array of shapes. We can use a general &ldquo;shape&rdquo;.</li>
+<li>Encapsulation: Is hiding an object&rsquo;s state. Ex: Not wanting to change attributes. Increases reliability&ndash;a reliable system doesn&rsquo;t have many bugs on paths of frequent executions.</li>
+</ul>
 </li>
 <li>
 <p><strong>Be able to give an overview of the Extreme Programming process from the survey of agile processes</strong></p>
@@ -59,13 +67,14 @@
 </li>
 <li>
 <p><strong>Be able to create a class diagram and a statechart from requirements</strong></p>
+<p><em>In the process of redrawing his scrawl.</em></p>
 <p>Class diagram: Library Example</p>
 <p>Statechart: Lift Control Case Study</p>
 </li>
 <li>
 <p><strong>Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
-<p>Verification and Validation
-Types of Testing—what is tested</p>
+<p>Verification and Validation</p>
+<p>Types of Testing—what is tested</p>
 <ul>
 <li>Unit</li>
 <li>Integration</li>
