--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -76,11 +76,11 @@ Drawback: class hierarchy.</li>
 <p>Verification and Validation</p>
 <p>Types of Testing—what is tested</p>
 <ul>
-<li>Unit</li>
-<li>Integration</li>
-<li>System</li>
-<li>Acceptance</li>
-<li>Regression</li>
+<li>Unit:</li>
+<li>Integration:</li>
+<li>System:</li>
+<li>Acceptance:</li>
+<li>Regression:</li>
 </ul>
 <p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/VandV.PDF" target="_blank">VandV.PDF</a>
 </p>
@@ -89,7 +89,7 @@ Drawback: class hierarchy.</li>
 <p><strong>Be able to create testcases with a JUnit framework</strong></p>
 <p><a href="http://junit.sourceforge.net/doc/testinfected/testing.htm" target="_blank">http://junit.sourceforge.net/doc/testinfected/testing.htm</a>
 
-(No coding)</p>
+(no coding)</p>
 </li>
 <li>
 <p><strong>Be able to create testcases according to boundary, statement and edge coverage criteria</strong></p>
