post review session

--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -51,13 +51,17 @@ Drawback: class hierarchy.</li>
 </p>
 </li>
 <li>
-<p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong></p>
-<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
+<p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong>
+![]https://heuristic-brahmagupta-965a2c.netlify.app/uploads/mvc-diagram.jpg
+Constraints and benefits:
+<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
 </p>
 </li>
 <li>
 <p><strong>Know how to implement event-based notification in Java</strong></p>
-<p>Listeners &hellip;</p>
+<p>General Idea/Code snippets from:
+<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
+</p>
 </li>
 <li>
 <p><strong>Know the syntax of the class diagram language (class representations, various kinds of associations)</strong></p>
@@ -67,20 +71,33 @@ Drawback: class hierarchy.</li>
 </li>
 <li>
 <p><strong>Be able to create a class diagram and a statechart from requirements</strong></p>
-<p><em>In the process of redrawing his scrawl.</em></p>
 <p>Class diagram: Library Example</p>
-<p>Statechart: Lift Control Case Study</p>
+<p>Statechart: LExceptionAndLightBulbClass.pdf</p>
 </li>
 <li>
 <p><strong>Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
-<p>Verification and Validation</p>
+<p><strong>V</strong>alidation: techniques for assessing the quality of a software product.
+<strong>V</strong>erification: the use of analytic inference to (formally) prove that a product is consistent with a specification of its intent</p>
 <p>Types of Testing—what is tested</p>
 <ul>
-<li>Unit:</li>
-<li>Integration:</li>
-<li>System:</li>
-<li>Acceptance:</li>
-<li>Regression:</li>
+<li>Unit: exercise a single simple component
+<ul>
+<li>Procedure</li>
+<li>Class</li>
+</ul>
+</li>
+<li>Integration: exercise a collection of interdependent components
+<ul>
+<li>Focus on interfaces between components</li>
+</ul>
+</li>
+<li>System: exercise a complete, stand-alone system</li>
+<li>Acceptance: customer&rsquo;s evaluation of a system
+<ul>
+<li>Usually a form of system testing</li>
+</ul>
+</li>
+<li>Regression: exercise a changed system</li>
 </ul>
 <p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/VandV.PDF" target="_blank">VandV.PDF</a>
 </p>
@@ -96,6 +113,34 @@ Drawback: class hierarchy.</li>
 <p>Given Java code. Provide X amount of paths.</p>
 </li>
 </ol>
+<hr>
+<p>03/08/22 Review Session</p>
+<ol>
+<li>
+<p>Inheritance, encapsulation, polymorphism. June 3 pdf. Definition, benefits and downsides.</p>
+</li>
+<li>
+<p>Draw Figure 2 diagram or textually describe the different phases. (Pair programming mentioned in class, senior-junior example)</p>
+</li>
+<li>
+<p>Model Driven development &hellip; manage the scale of large systems. Theoretically spent all your time designing so coding/product can be automated/easier. Less testing because more validation. &ldquo;The system is validated at the analysis model level&rdquo;.</p>
+</li>
+<li>
+<p>Model-View-Controller (recreate MVC diagram jpg) &ldquo;MVC Architecture from SUN&rdquo; Benefits:</p>
+<ul>
+<li>Prof&rsquo;s favorite: Ability to create multiple views w/o shutting down the model.</li>
+<li>Reusability of application and/or user interface compoents</li>
+<li>Ability to develop the application</li>
+</ul>
+</li>
+<li>
+<p>Basic idea for implementation/methodology. Probably not code based testing. Modern software can talk with other software.</p>
+</li>
+</ol>
+<p>6 - 8. Create your own diagrams. More flexibile than library example (blank boxes are short-term/long-term goal)&hellip;
+Statechart ExceptionAndLightBulbClass.pdf &hellip;</p>
+<p>9.</p>
+<p>10.</p>
 
 	</div>
 </body>
