--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -51,18 +51,17 @@ Drawback: class hierarchy.</li>
 </p>
 </li>
 <li>
-<p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong>
-![]https://heuristic-brahmagupta-965a2c.netlify.app/uploads/mvc-diagram.jpg
-Constraints and benefits:
-<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
-</p>
+<p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong> 
+<img src="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/mvc-diagram.jpg" alt=""></p>
 </li>
-<li>
-<p><strong>Know how to implement event-based notification in Java</strong></p>
-<p>General Idea/Code snippets from:
-<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
-</p>
-</li>
+</ol>
+<p>Constraints and benefits: <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
+
+5. <strong>Know how to implement event-based notification in Java</strong></p>
+<pre><code>General Idea/Code snippets from:
+[model-view-controller.PDF] (https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF)
+</code></pre>
+<ol start="6">
 <li>
 <p><strong>Know the syntax of the class diagram language (class representations, various kinds of associations)</strong></p>
 </li>
@@ -76,8 +75,8 @@ Constraints and benefits:
 </li>
 <li>
 <p><strong>Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
-<p><strong>V</strong>alidation: techniques for assessing the quality of a software product.
-<strong>V</strong>erification: the use of analytic inference to (formally) prove that a product is consistent with a specification of its intent</p>
+<p><strong>V</strong>alidation: techniques for assessing the quality of a software product.</p>
+<p><strong>V</strong>erification: the use of analytic inference to (formally) prove that a product is consistent with a specification of its intent</p>
 <p>Types of Testing—what is tested</p>
 <ul>
 <li>Unit: exercise a single simple component
@@ -123,24 +122,30 @@ Constraints and benefits:
 <p>Draw Figure 2 diagram or textually describe the different phases. (Pair programming mentioned in class, senior-junior example)</p>
 </li>
 <li>
-<p>Model Driven development &hellip; manage the scale of large systems. Theoretically spent all your time designing so coding/product can be automated/easier. Less testing because more validation. &ldquo;The system is validated at the analysis model level&rdquo;.</p>
+<p>Model Driven. Goal is to manage the scale of large systems. Theoretically spent all your time designing so coding/product can be automated/easier. Less testing because more validation. &ldquo;The system is validated at the analysis model level&rdquo;.</p>
 </li>
 <li>
-<p>Model-View-Controller (recreate MVC diagram jpg) &ldquo;MVC Architecture from SUN&rdquo; Benefits:</p>
+<p>Model-View-Controller. Recreate SUN diagram above.</p>
 <ul>
-<li>Prof&rsquo;s favorite: Ability to create multiple views w/o shutting down the model.</li>
+<li>Prof&rsquo;s favorite (often mentioned) benefit: Ability to create multiple views w/o shutting down the model.</li>
 <li>Reusability of application and/or user interface compoents</li>
-<li>Ability to develop the application</li>
+<li>Ability to develop the application&hellip;</li>
 </ul>
 </li>
 <li>
-<p>Basic idea for implementation/methodology. Probably not code based testing. Modern software can talk with other software.</p>
+<p>Basic ideas for implementation/methodology. Probably not code-based testing on MT. &ldquo;Modern software can talk with other software&rdquo;.</p>
+</li>
+<li>
+<p>(6-8) Create your own diagrams. More &ldquo;flexibile&rdquo; than library example (of which the blank boxes represent short-term/long-term goals)&hellip;
+<strong>Statechart</strong> ExceptionAndLightBulbClass.pdf &hellip;</p>
+</li>
+<li>
+<p>Unit Testing in Java: How Tests Drive the Code supplementary textbook</p>
+</li>
+<li>
+<p>Create a control flow graph. Write out paths that satisfy edge converage. Write conditions. Write test cases. Invisible paths vs visible paths.</p>
 </li>
 </ol>
-<p>6 - 8. Create your own diagrams. More flexibile than library example (blank boxes are short-term/long-term goal)&hellip;
-Statechart ExceptionAndLightBulbClass.pdf &hellip;</p>
-<p>9.</p>
-<p>10.</p>
 
 	</div>
 </body>
