v2 of review session

--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -56,12 +56,12 @@ Drawback: class hierarchy.</li>
 </li>
 </ol>
 <p>Constraints and benefits: <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
-
-5. <strong>Know how to implement event-based notification in Java</strong></p>
-<pre><code>General Idea/Code snippets from:
-[model-view-controller.PDF] (https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF)
-</code></pre>
-<ol start="6">
+</p>
+<ol start="5">
+<li>
+<p><strong>Know how to implement event-based notification in Java</strong></p>
+<p>General Idea/Code snippets from MVC pdf.</p>
+</li>
 <li>
 <p><strong>Know the syntax of the class diagram language (class representations, various kinds of associations)</strong></p>
 </li>
@@ -71,7 +71,7 @@ Drawback: class hierarchy.</li>
 <li>
 <p><strong>Be able to create a class diagram and a statechart from requirements</strong></p>
 <p>Class diagram: Library Example</p>
-<p>Statechart: LExceptionAndLightBulbClass.pdf</p>
+<p>Statechart: ExceptionAndLightBulbClass.pdf</p>
 </li>
 <li>
 <p><strong>Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
@@ -105,16 +105,15 @@ Drawback: class hierarchy.</li>
 <p><strong>Be able to create testcases with a JUnit framework</strong></p>
 <p><a href="http://junit.sourceforge.net/doc/testinfected/testing.htm" target="_blank">http://junit.sourceforge.net/doc/testinfected/testing.htm</a>
 
-(no coding)</p>
+(no coding/not asked)</p>
 </li>
 <li>
 <p><strong>Be able to create testcases according to boundary, statement and edge coverage criteria</strong></p>
-<p>Given Java code. Provide X amount of paths.</p>
 </li>
 </ol>
 <hr>
 <p>03/08/22 Review Session</p>
-<ol>
+<ul>
 <li>
 <p>Inheritance, encapsulation, polymorphism. June 3 pdf. Definition, benefits and downsides.</p>
 </li>
@@ -136,8 +135,8 @@ Drawback: class hierarchy.</li>
 <p>Basic ideas for implementation/methodology. Probably not code-based testing on MT. &ldquo;Modern software can talk with other software&rdquo;.</p>
 </li>
 <li>
-<p>(6-8) Create your own diagrams. More &ldquo;flexibile&rdquo; than library example (of which the blank boxes represent short-term/long-term goals)&hellip;
-<strong>Statechart</strong> ExceptionAndLightBulbClass.pdf &hellip;</p>
+<p>Create your own diagrams. More &ldquo;flexibile&rdquo; than library example (of which the blank boxes represent short-term/long-term goals)&hellip;</p>
+<p><strong>Statechart</strong> ExceptionAndLightBulbClass.pdf &hellip;</p>
 </li>
 <li>
 <p>Unit Testing in Java: How Tests Drive the Code supplementary textbook</p>
@@ -145,7 +144,7 @@ Drawback: class hierarchy.</li>
 <li>
 <p>Create a control flow graph. Write out paths that satisfy edge converage. Write conditions. Write test cases. Invisible paths vs visible paths.</p>
 </li>
-</ol>
+</ul>
 
 	</div>
 </body>
