--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,15 @@
 <body class = "bg-light-yellow">
 	<nav class="pa3 pa4-n bl bw3">
   <a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>
-  <a class="link dim gray    f6 f5-ns dib mr3" href="https://github.com/dxyz004" target="_blank" rel="noopener noreferrer">GitHub</a>
   
 </nav>
 
 
 	
 	<section class="mw7 center">
-	<ul class="list pl0">
-		<a class="db f3 mb1 dim" href="/midtermoutline/">
-			<h1 class="f3 fw1 mt0 lh-title">Midterm Outline</h1>
+	<ul class="list pl0 ml0 center mw6 ba">
+		<a class="ph3 pv3 bb dim" href="/midtermoutline/">
+			<h1 class="f4 bold center mw6">Midterm Outline</h1>
 		</a>
 	</ul>
 	</section>
