--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -9,7 +9,6 @@
 <body class = "bg-light-yellow">
 	<nav class="pa3 pa4-n bl bw3">
   <a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>
-  <a class="link dim gray    f6 f5-ns dib mr3" href="https://github.com/dxyz004" target="_blank" rel="noopener noreferrer">GitHub</a>
   
 </nav>
 
@@ -53,11 +52,9 @@ Drawback: class hierarchy.</li>
 <li>
 <p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong> 
 <img src="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/mvc-diagram.jpg" alt=""></p>
-</li>
-</ol>
 <p>Constraints and benefits: <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
 </p>
-<ol start="5">
+</li>
 <li>
 <p><strong>Know how to implement event-based notification in Java</strong></p>
 <p>General Idea/Code snippets from MVC pdf.</p>
@@ -112,7 +109,7 @@ Drawback: class hierarchy.</li>
 </li>
 </ol>
 <hr>
-<p>03/08/22 Review Session</p>
+<!-- raw HTML omitted -->
 <ul>
 <li>
 <p>Inheritance, encapsulation, polymorphism. June 3 pdf. Definition, benefits and downsides.</p>
@@ -132,14 +129,14 @@ Drawback: class hierarchy.</li>
 </ul>
 </li>
 <li>
-<p>Basic ideas for implementation/methodology. Probably not code-based testing on MT. &ldquo;Modern software can talk with other software&rdquo;.</p>
+<p>Basic ideas for implementation and methodology. Probably not code-based testing on MT. &ldquo;Modern software can talk with other software&rdquo;.</p>
 </li>
 <li>
 <p>Create your own diagrams. More &ldquo;flexibile&rdquo; than library example (of which the blank boxes represent short-term/long-term goals)&hellip;</p>
 <p><strong>Statechart</strong> ExceptionAndLightBulbClass.pdf &hellip;</p>
 </li>
 <li>
-<p>Unit Testing in Java: How Tests Drive the Code supplementary textbook</p>
+<p>&ldquo;Unit Testing in Java: How Tests Drive the Code&rdquo; supplementary textbook</p>
 </li>
 <li>
 <p>Create a control flow graph. Write out paths that satisfy edge converage. Write conditions. Write test cases. Invisible paths vs visible paths.</p>
