--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 	
 	<section class="mw7 center">
 	<ul class="list pl0 ml0 center mw6 ba">
-		<a class="ph3 pv3 bb dim" href="/midtermoutline/">
-			<h1 class="f4 bold center mw6">Midterm Outline</h1>
+		<a class="ph3 pv3 dim" href="/midtermoutline/">
+			<li class="ph3 pv3">Midterm Outline</li>
 		</a>
 	</ul>
 	</section>
