--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -109,7 +109,7 @@ Drawback: class hierarchy.</li>
 </li>
 </ol>
 <hr>
-<!-- raw HTML omitted -->
+<p><strong>03/08/22 Review Session</strong></p>
 <ul>
 <li>
 <p>Inheritance, encapsulation, polymorphism. June 3 pdf. Definition, benefits and downsides.</p>
