all pdfs hosted and linked.

--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -57,7 +57,7 @@ Drawback: class hierarchy.</li>
 </li>
 <li>
 <p><strong>Know how to implement event-based notification in Java</strong></p>
-<p>General Idea/Code snippets from MVC pdf.</p>
+<p>General idea/Code snippets from MVC pdf.</p>
 </li>
 <li>
 <p><strong>Know the syntax of the class diagram language (class representations, various kinds of associations)</strong></p>
@@ -67,8 +67,12 @@ Drawback: class hierarchy.</li>
 </li>
 <li>
 <p><strong>Be able to create a class diagram and a statechart from requirements</strong></p>
-<p>Class diagram: Library Example</p>
-<p>Statechart: ExceptionAndLightBulbClass.pdf</p>
+<p>Class diagram:
+<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/libraryexample.pdf" target="_blank">libraryexample.pdf</a>
+</p>
+<p>Statechart: ExceptionAndLightBulbClass.pdf
+<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/exceptionandlightbulbclass.pdf" target="_blank">exceptionandlightbulbclass.pdf</a>
+</p>
 </li>
 <li>
 <p><strong>Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
@@ -133,7 +137,6 @@ Drawback: class hierarchy.</li>
 </li>
 <li>
 <p>Create your own diagrams. More &ldquo;flexibile&rdquo; than library example (of which the blank boxes represent short-term/long-term goals)&hellip;</p>
-<p><strong>Statechart</strong> ExceptionAndLightBulbClass.pdf &hellip;</p>
 </li>
 <li>
 <p>&ldquo;Unit Testing in Java: How Tests Drive the Code&rdquo; supplementary textbook</p>
