--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -70,7 +70,7 @@ Drawback: class hierarchy.</li>
 <p>Class diagram:
 <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/libraryexample.pdf" target="_blank">libraryexample.pdf</a>
 </p>
-<p>Statechart: ExceptionAndLightBulbClass.pdf
+<p>Statechart:
 <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/exceptionandlightbulbclass.pdf" target="_blank">exceptionandlightbulbclass.pdf</a>
 </p>
 </li>
