--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -48,12 +48,28 @@ Drawback: class hierarchy.</li>
 <p>Advantages/Why:
 <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/introclassesattr.pdf" target="_blank">introclassesattr.pdf</a>
 </p>
+<p>Using models to design complex systems is derigeur (strictness) in traditional engineering disciplines. No one would imagine constructing an edifice as complex as a bridge or an automobile without first constructing a variety of specialized system models from using models and modeling techniques. Models help us understand a complex problem and its potential solutions through abstraction. Therefore, it seems obvious that software systems, which are often among the most complex engineering systems, can benefit greatly.</p>
+<p>MDD’s defining characteristic is that software
+development’s primary focus and products are
+models rather than computer programs.The
+major advantage of this is that we express
+models using concepts that are much less
+bound to the underlying implementation
+technology and are much closer to the problem
+domain relative to most popular programming
+languages. This makes the models easier to
+specify, understand, verify and maintain.</p>
 </li>
 <li>
 <p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong> 
 <img src="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/mvc-diagram.jpg" alt=""></p>
 <p>Constraints and benefits: <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
 </p>
+<ul>
+<li>Reusability of application and / or user interface components,</li>
+<li>Ability to develop the application and user interface separately,</li>
+<li>Ability to inherit from different parts of the class hierarchy.</li>
+</ul>
 </li>
 <li>
 <p><strong>Know how to implement event-based notification in Java</strong></p>
@@ -142,7 +158,7 @@ Drawback: class hierarchy.</li>
 <p>&ldquo;Unit Testing in Java: How Tests Drive the Code&rdquo; supplementary textbook</p>
 </li>
 <li>
-<p>Create a control flow graph. Write out paths that satisfy edge converage. Write conditions. Write test cases. Invisible paths vs visible paths.</p>
+<p>Create a control flow graph. Write out paths that satisfy edge converage. Write conditions. Write test cases. Are there any infeasible paths?</p>
 </li>
 </ul>
 
