--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -138,7 +138,7 @@ specify, understand, verify and maintain.</p>
 <p>Draw Figure 2 diagram or textually describe the different phases. (Pair programming mentioned in class, senior-junior example)</p>
 </li>
 <li>
-<p>Model Driven. Goal is to manage the scale of large systems. Theoretically spent all your time designing so coding/product can be automated/easier. Less testing because more validation. &ldquo;The system is validated at the analysis model level&rdquo;.</p>
+<p>Model Driven. Goal is to manage the scale of large systems. Theoretically spend all your time designing so coding/product can be automated/easier. Less testing because more validation. &ldquo;The system is validated at the analysis model level&rdquo;.</p>
 </li>
 <li>
 <p>Model-View-Controller. Recreate SUN diagram above.</p>
@@ -152,7 +152,7 @@ specify, understand, verify and maintain.</p>
 <p>Basic ideas for implementation and methodology. Probably not code-based testing on MT. &ldquo;Modern software can talk with other software&rdquo;.</p>
 </li>
 <li>
-<p>Create your own diagrams. More &ldquo;flexibile&rdquo; than library example (of which the blank boxes represent short-term/long-term goals)&hellip;</p>
+<p>Create your own diagrams. More &ldquo;flexible&rdquo; than library example (of which the blank boxes represent short-term/long-term goals)&hellip;</p>
 </li>
 <li>
 <p>&ldquo;Unit Testing in Java: How Tests Drive the Code&rdquo; supplementary textbook</p>
