--- a/public/fast/index.html
+++ b/public/fast/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
+	<link rel="stylesheet" href="https://heuristic-brahmagupta-965a2c.netlify.app/css/tachyons.min.css"/>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,16 +9,12 @@
 <body class = "bg-light-yellow">
 	<nav class="pa3 pa4-n bl bw3">
   <a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>
-  <a class="link dim gray    f6 f5-ns dib mr3" href="https://github.com/dxyz004" target="_blank" rel="noopener noreferrer">GitHub</a>
-  <a class="link dim gray    f6 f5-ns dib mr3" href="#">About</a>
-  <a class="link dim gray    f6 f5-ns dib mr3" href="#">Store</a>
-  <a class="link dim gray    f6 f5-ns dib" href="#">Contact</a>
+  
 </nav>
 
 
 	<div class="bg-light-yellow mw7 center">
-		<p><strong>FAST</strong> is a one-number metric to help inform of the next two-way NBA stars.</p>
-<p><strong>FAST</strong> stands for:</p>
+		<p><strong>FAST</strong> stands for:</p>
 <ul>
 <li><strong>F</strong>ree throws</li>
 <li><strong>A</strong>ge</li>
