--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,21 @@
 
 
 	
+	<section class="mw7 center">
+	<ul class="list pl0 ml0 center mw6 ba">
+		<a class="ph3 pv3 dim" href="/midtermoutline/">
+			<li class="ph3 pv3">Midterm Outline</li>
+		</a>
+	</ul>
+	</section>
+	
+	<section class="mw7 center">
+	<ul class="list pl0 ml0 center mw6 ba">
+		<a class="ph3 pv3 dim" href="/fast/">
+			<li class="ph3 pv3">FAST: A College Basketball Metric</li>
+		</a>
+	</ul>
+	</section>
+	
 </body>
 </html>
