--- a/public/fast/index.html
+++ b/public/fast/index.html
@@ -21,6 +21,7 @@
 <li><strong>S</strong>teals</li>
 <li><strong>T</strong>urnovers</li>
 </ul>
+<p>FAST is yet another one-number-metric to forecast a college basketball player&rsquo;s pro potential&hellip;</p>
 
 	</div>
 </body>
