--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -17,10 +17,6 @@
 		<ol>
 <li>
 <p><strong>Know the principles of Object Oriented programming (inheritance, encapsulation etc.)</strong></p>
-<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/3354_oo_process.pdf" target="_blank">3354_oo_process.pdf</a>
-</p>
-<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/3354_s20_june3-2020.pdf" target="_blank">3354_s20_june3-2020.pdf</a>
-</p>
 <p>Use All to Achieve OO:</p>
 <ul>
 <li>Inheritance: Is an ability to inherit. Function implementations (behaviors) by a subclass from a super class. Main benefit is software reuse.
@@ -33,7 +29,7 @@ Drawback: class hierarchy.</li>
 <li>
 <p><strong>Be able to give an overview of the Extreme Programming process from the survey of agile processes</strong></p>
 <p><em>3.1.1. Process (Figure 2. Life cycle &hellip;)</em></p>
-<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/agilecomp.pdf" target="_blank">agilecomp.pdf</a>
+<p><a href="https://arxiv.org/abs/1709.08439" target="_blank">agilecomp.pdf</a>
 </p>
 </li>
 <li>
@@ -45,9 +41,6 @@ Drawback: class hierarchy.</li>
 <li>A software and execution architecture is defined as a set of class templates in an object-oriented programming system.</li>
 <li>The executable system is realized by compilation of the validated analysis model to the software execution architecture.</li>
 </ul>
-<p>Advantages/Why:
-<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/introclassesattr.pdf" target="_blank">introclassesattr.pdf</a>
-</p>
 <p>Using models to design complex systems is derigeur (strictness) in traditional engineering disciplines. No one would imagine constructing an edifice as complex as a bridge or an automobile without first constructing a variety of specialized system models from using models and modeling techniques. Models help us understand a complex problem and its potential solutions through abstraction. Therefore, it seems obvious that software systems, which are often among the most complex engineering systems, can benefit greatly.</p>
 <p>MDD’s defining characteristic is that software
 development’s primary focus and products are
@@ -61,8 +54,7 @@ languages. This makes the models easier to
 specify, understand, verify and maintain.</p>
 </li>
 <li>
-<p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong> 
-<img src="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/mvc-diagram.jpg" alt=""></p>
+<p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong></p>
 <p>Constraints and benefits: <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
 </p>
 <ul>
@@ -83,12 +75,6 @@ specify, understand, verify and maintain.</p>
 </li>
 <li>
 <p><strong>Be able to create a class diagram and a statechart from requirements</strong></p>
-<p>Class diagram:
-<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/libraryexample.pdf" target="_blank">libraryexample.pdf</a>
-</p>
-<p>Statechart:
-<a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/exceptionandlightbulbclass.pdf" target="_blank">exceptionandlightbulbclass.pdf</a>
-</p>
 </li>
 <li>
 <p><strong>Know what is tested in different stages of testing (unit, integration, system, acceptance, regression)</strong></p>
@@ -115,21 +101,18 @@ specify, understand, verify and maintain.</p>
 </li>
 <li>Regression: exercise a changed system</li>
 </ul>
-<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/VandV.PDF" target="_blank">VandV.PDF</a>
-</p>
 </li>
 <li>
 <p><strong>Be able to create testcases with a JUnit framework</strong></p>
-<p><a href="http://junit.sourceforge.net/doc/testinfected/testing.htm" target="_blank">http://junit.sourceforge.net/doc/testinfected/testing.htm</a>
-
-(no coding/not asked)</p>
+<p><a href="https://junit.org/junit5/docs/current/user-guide/" target="_blank">https://junit.org/junit5/docs/current/user-guide/</a>
+</p>
 </li>
 <li>
 <p><strong>Be able to create testcases according to boundary, statement and edge coverage criteria</strong></p>
 </li>
 </ol>
 <hr>
-<p><strong>03/08/22 Review Session</strong></p>
+<p><strong>Review Session</strong></p>
 <ul>
 <li>
 <p>Inheritance, encapsulation, polymorphism. June 3 pdf. Definition, benefits and downsides.</p>
