--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <body class = "bg-light-yellow">
 	<nav class="pa3 pa4-n bl bw3">
   <a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>
+  <a class="link dim gray    f6 f5-ns dib mr3" href="https://www.youtube.com/watch?v=pP1uswAwZi4" target="_blank" rel="noopener noreferrer">Demo Video</a>
   
 </nav>
 
