--- a/public/kaulu/index.html
+++ b/public/kaulu/index.html
@@ -16,9 +16,8 @@
 
 
 	<div class="bg-light-yellow mw7 center">
-		<p><a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/home.png" target="_blank">logo</a>
-</p>
-<p>Kaulu (kah-oo-loo) is a Hawaiian word for a mythological trickster god. The search engine&rsquo;s borrows its fun (with less mischief) sounding name.</p>
+		<p><img src="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/home.png" alt=""></p>
+<p>Kaulu (kah-oo-loo) is a Hawaiian word for a mythological trickster god. The search engine borrows its fun (with less mischief) sounding name.</p>
 <p>Demonstration notes:</p>
 <ul>
 <li>The local search functionality is handled using Lucene. The web search functionality is handled using a Google API.</li>
