--- a/public/kaulu/index.html
+++ b/public/kaulu/index.html
@@ -11,7 +11,7 @@
 
 
 	<div class="bg-light-yellow mw7 center">
-		<p><img src="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/home_half.png" alt=""></p>
+		<p><img src="uploads/home_half.png" alt=""></p>
 <p>Kaulu (kah-oo-loo) is a Hawaiian word for a mythological trickster god. The search engine borrows its fun (with less mischief) sounding name.</p>
 <p>Demonstration notes:</p>
 <ul>
