--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -51,7 +51,7 @@ specify, understand, verify and maintain.</p>
 </li>
 <li>
 <p><strong>Know the Model-View-Controller (MVC) architectural style - its constraints and benefits</strong></p>
-<p>Constraints and benefits: <a href="https://heuristic-brahmagupta-965a2c.netlify.app/uploads/model-view-controller.PDF" target="_blank">model-view-controller.PDF</a>
+<p>Constraints and benefits: 
 </p>
 <ul>
 <li>Reusability of application and / or user interface components,</li>
