header, images trial

--- a/public/midtermoutline/index.html
+++ b/public/midtermoutline/index.html
@@ -7,7 +7,9 @@
 	<title>Daniel's Notes</title>
 </head>
 <body class = "bg-light-yellow">
-
+	<nav class="pa3 pa4-n bl bw3">
+		<a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>  
+	</nav>
 
 	<div class="bg-light-yellow mw7 center">
 		<ol>
