--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 	<title>Daniel's Notes</title>
 </head>
 <body class = "bg-light-yellow">
-
+	<nav class="pa3 pa4-n bl bw3">
+		<a class="link dim black b f6 f5-ns dib mr3" href="/" title="Home">Daniel's Notes</a>	  
+	  </nav>
 
 
 	
